person header z-index fix

--- a/css/hacks.css
+++ b/css/hacks.css
@@ -1,66 +1,88 @@
-.nf-form-hp {
-	position: absolute;
-	visibility: hidden;
+.nf-after-form-content {
+    font: 16px/22px Figgins Sans, Arial, sans-serif;
 }
+
+.nf-form-hp {
+    position: absolute;
+    visibility: hidden;
+}
+
 .nf-form-fields-required {
-	font: 16px/22px Figgins Sans, Arial, sans-serif;
+    display: none;
+    font: 16px/22px Figgins Sans, Arial, sans-serif;
     margin-bottom: 13px;
 }
 
-#nf-field-9-wrap .nf-field-element {
-	display: inline-block;
-	vertical-align: middle;
-	position: relative;
-	margin-bottom: 22px;
-	width: 100%;
-	height: 47px;
-	max-width: 100%;
-}
-#nf-field-9-wrap input {
-	width: 100%;
-	height: 100%;
-	box-sizing: border-box;
-	font: bold 16px/45px Figgins Sans, Arial, sans-serif;
-	color: #181818;
-	border: 3px solid currentcolor;
-	background-color: #fff;
-	padding: 0;
-	margin: 0;
-	text-transform: uppercase;
-	cursor: pointer;
-	white-space: nowrap;
-	text-decoration: none;
-	cursor: pointer;
-	user-select: none;
-	-moz-appearance: none;
-	border-radius: 0;
-	text-overflow: ellipsis;
-} 
-
-#nf-field-9-wrap .nf-field-element::before {
-	position: absolute;
-	left: 100%;
-	top: 3px;
-	bottom: -3px;
-	border-right: 1px solid currentcolor;
-	content: '';
-	transition: .1s transform ease-in-out 0s;
-	width: 10px;
-}
-#nf-field-9-wrap .nf-field-element::after {
-	position: absolute;
-	right: -3px;
-	height: 10px;
-	top: 100%;
-	left: 4px;
-	border-bottom: 1px solid currentcolor;
-	content: '';
-	transition: .1s transform ease-in-out 0s;
-}
-#nf-field-9-wrap .nf-field-element:hover::before {
-	transform: translateX(2px);
-}
-#nf-field-9-wrap .nf-field-element:hover::after {
-	transform: translateY(2px);
+.submit-wrap.field-wrap > div input {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    font: bold 16px/45px Figgins Sans, Arial, sans-serif;
+    color: #181818;
+    border: 3px solid currentcolor;
+    background-color: #fff;
+    padding: 0;
+    margin: 0;
+    text-transform: uppercase;
+    cursor: pointer;
+    white-space: nowrap;
+    text-decoration: none;
+    cursor: pointer;
+    user-select: none;
+    -moz-appearance: none;
+    border-radius: 0;
+    text-overflow: ellipsis;
 }
 
+.submit-wrap.field-wrap > div.nf-field-element {
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    margin-bottom: 22px;
+    width: 100%;
+    height: 47px;
+    max-width: 100%;
+}
+
+.submit-wrap.field-wrap > div.nf-field-element::before {
+    position: absolute;
+    left: 100%;
+    top: 3px;
+    bottom: -3px;
+    border-right: 1px solid currentcolor;
+    content: '';
+    transition: .1s transform ease-in-out 0s;
+    width: 10px;
+}
+
+.submit-wrap.field-wrap > div.nf-field-element::after {
+    position: absolute;
+    right: -3px;
+    height: 10px;
+    top: 100%;
+    left: 4px;
+    border-bottom: 1px solid currentcolor;
+    content: '';
+    transition: .1s transform ease-in-out 0s;
+}
+
+.submit-wrap.field-wrap > div.nf-field-element:hover::before {
+    transform: translateX(2px);
+}
+
+.submit-wrap.field-wrap > div.nf-field-element:hover::after {
+    transform: translateY(2px);
+}
+
+#nf-form-3-cont .nf-field-container {
+    margin-bottom: 15px;
+}
+
+#nf-form-3-cont .submit-wrap.field-wrap > div input,
+#nf-form-3-cont .submit-wrap.field-wrap > div.nf-field-element {
+    width: 280px;
+}
+
+#nf-form-3-cont .submit-wrap.field-wrap > div.nf-field-element {
+    margin: 0 auto 22px;
+}
