--- a/css/person.css
+++ b/css/person.css
@@ -41,6 +41,7 @@
 	visibility: hidden;
 	padding-bottom: 14px;
 	background-image: linear-gradient(to top, rgba(255,255,255,0) 0px, rgba(255,255,255,0) 8px, rgba(255,255,255,.8) 8px, #fff 8px);
+	z-index: 2;
 }
 	.person_header.is_visible {
 		transition-delay: 0s, 0s, 0s;
